--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,12 @@
 .hide{
   display: none;
 }
+.clicktimes{
+  width: 50px;
+  height: 50px;
+  border: 1px solid black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: lightgrey;
+}
